Alteração na imagem de fundo

--- a/index.html
+++ b/index.html
@@ -9,18 +9,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
   <body>
-    <!--<header>
-        <nav>
-            <div class="logo">
-                <img src="img/logo.png" alt="">
-            </div>
-                <div class="cabecalho">
-                        <a href="index.html"><ul>Ofertas</ul></a>
-                        <a href="index.html"><ul>Contato</ul></a>
-                        <a href="index.html"><ul>Sobre</ul></a>
-                </div>
-            </nav>
-        </header>!-->
       <header class="topo">
         <div class="container">
           <div class="logo">
@@ -41,7 +29,7 @@
           </div>
       </header>
           <div class="imagem-fundo">
-            <img src="img/Image_fx (1).jpg" alt="">
+            <img src="img/Image_fx (1).jpg" alt="Imagem sófa fundo">
           </div>
     </body>
 </html>
