Adicionado seção Ofertas

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
           <div class="logo">
             <img src="img/icon_logosite(1).png" alt="Logo Casa do Conforto">
-          <span>Casa do Conforto</span>
+          <span>Casa do Conforto</span> 
         </div>
           <form class="busca">
         <input type="text" placeholder="Busque o que precisa aqui">
@@ -28,8 +28,14 @@
             </nav>
           </div>
       </header>
+      <section class="ofertas">
           <div class="imagem-fundo">
             <img src="img/Image_fx (1).jpg" alt="Imagem sófa fundo">
           </div>
+          <div class="frase-ofertas">
+          <h1>As melhores ofertas e os melhores preços</h1>
+          </div>
+          
+        </section> 
     </body>
 </html>
