Resolvido problema na imagem de fundo e iniciando cards

--- a/index.html
+++ b/index.html
@@ -28,14 +28,20 @@
             </nav>
           </div>
       </header>
-      <section class="ofertas">
-          <div class="imagem-fundo">
-            <img src="img/Image_fx (1).jpg" alt="Imagem sófa fundo">
-          </div>
+      <section class="secao-ofertas">
+          <!-- <div class="imagem-fundo"> -->
+            <!-- <img src="img/image_fx.png" alt="Imagem sofá fundo"> -->
+          <!-- </div> -->
           <div class="frase-ofertas">
-          <h1>As melhores ofertas e os melhores preços</h1>
+            <h1>As melhores ofertas e os melhores preços</h1>
           </div>
-          
+          <div class="primeiro-card">
+            <p class="paragrafo-card1">Poltrona de Veludo Aconchegante com Desconto</p>
+            <img src="img/sofá-card1.png" alt="">
+          </div>
         </section> 
+        <footer>
+          <p>&copy; 2025 Casa do Conforto. Todos os direitos reservados.</p>
+        </footer>        
     </body>
 </html>
