--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casa do conforto</title>
-    <link rel="shortcurt icon" type="image/png" href="icon_logosite.png"/>
+    <link rel="shortcurt icon" type="image/png" href="img/icon_logosite.png"/>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -35,10 +35,29 @@
           <div class="frase-ofertas">
             <h1>As melhores ofertas e os melhores preços</h1>
           </div>
-          <div class="primeiro-card">
+          <!--<div class="primeiro-card">
             <p class="paragrafo-card1">Poltrona de Veludo Aconchegante com Desconto</p>
-            <img src="img/sofá-card1.png" alt="">
-          </div>
+            <img src="img/sofá-card1.png" alt="Imagem sofá">
+            <button>Confira essas e outras ofertas aqui!</button>
+          </div>-->
+          <div class="cards-ofertas">
+            <div class="primeiro-card">
+              <img src="img/poltrona.png" alt="Poltrona">
+              <p class="paragrafo-card1">Poltrona de Veludo Aconchegante com Desconto!</p>
+              <button>Confira essas e outras ofertas aqui!</button>
+            </div>
+        
+            <div class="segundo-card">
+              <img src="img/sofá.png" alt="Sofá">
+              <p class="paragrafo-card1">Sofá Luxo com Almofadas Grátis - Oferta Exclusiva!</p>
+              <button>Confira essas e outras ofertas aqui!</button>
+            </div>
+        
+            <div class="primeiro-card">
+              <img src="img/armário-cozinha.png" alt="Cozinha">
+              <p class="paragrafo-card1">Cozinha Completa com tudo incluso + Coifa de Brinde!</p>
+              <button>Confira essas e outras ofertas aqui!</button>
+            </div>
         </section> 
         <footer>
           <p>&copy; 2025 Casa do Conforto. Todos os direitos reservados.</p>
