--- a/index.html
+++ b/index.html
@@ -1,66 +1,98 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Casa do conforto</title>
-    <link rel="shortcurt icon" type="image/png" href="img/icon_logosite.png"/>
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Casa do conforto</title>
+  <link rel="shortcurt icon" type="image/png" href="img/icon_logosite.png" />
+  <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
-  <body>
-      <header class="topo">
-        <div class="container">
-          <div class="logo">
-            <img src="img/icon_logosite(1).png" alt="Logo Casa do Conforto">
-          <span>Casa do Conforto</span> 
-        </div>
-          <form class="busca">
+
+<body>
+  <header class="topo">
+    <div class="container">
+      <div class="logo">
+        <img src="img/icon_logosite(1).png" alt="Logo Casa do Conforto">
+        <span>Casa do Conforto</span>
+      </div>
+      <form class="busca">
         <input type="text" placeholder="Busque o que precisa aqui">
-          <button><i class="fa fa-search"></i></button>
-          </form>
-            <nav class="menu">
-              <a href="index.html">Ofertas</a>
-              <a href="index.html">Contato</a>
-              <a href="index.html">Sobre</a>
-              <a href="index.html"><i class="fa fa-shopping-cart"></i> Carrinho</a>
-              <a href="index.html"><i class="fa fa-user"></i> Conta</a>
-            </nav>
-          </div>
-      </header>
-      <section class="secao-ofertas">
-          <!-- <div class="imagem-fundo"> -->
-            <!-- <img src="img/image_fx.png" alt="Imagem sofá fundo"> -->
-          <!-- </div> -->
-          <div class="frase-ofertas">
-            <h1>As melhores ofertas e os melhores preços</h1>
-          </div>
-          <!--<div class="primeiro-card">
+        <button><i class="fa fa-search"></i></button>
+      </form>
+      <nav class="menu">
+        <a href="index.html">Ofertas</a>
+        <a href="index.html">Contato</a>
+        <a href="index.html">Sobre</a>
+        <a href="index.html"><i class="fa fa-shopping-cart"></i> Carrinho</a>
+        <a href="index.html"><i class="fa fa-user"></i> Conta</a>
+      </nav>
+    </div>
+  </header>
+  <section class="secao-ofertas">
+    <!-- <div class="imagem-fundo"> -->
+    <!-- <img src="img/image_fx.png" alt="Imagem sofá fundo"> -->
+    <!-- </div> -->
+    <div class="frase-ofertas">
+      <h1>As melhores ofertas e os melhores preços</h1>
+    </div>
+    <!--<div class="primeiro-card">
             <p class="paragrafo-card1">Poltrona de Veludo Aconchegante com Desconto</p>
             <img src="img/sofá-card1.png" alt="Imagem sofá">
             <button>Confira essas e outras ofertas aqui!</button>
           </div>-->
-          <div class="cards-ofertas">
-            <div class="primeiro-card">
-              <img src="img/poltrona.png" alt="Poltrona">
-              <p class="paragrafo-card1">Poltrona de Veludo Aconchegante com Desconto!</p>
-              <button>Confira essas e outras ofertas aqui!</button>
-            </div>
-        
-            <div class="segundo-card">
-              <img src="img/sofá.png" alt="Sofá">
-              <p class="paragrafo-card1">Sofá Luxo com Almofadas Grátis - Oferta Exclusiva!</p>
-              <button>Confira essas e outras ofertas aqui!</button>
-            </div>
-        
-            <div class="primeiro-card">
-              <img src="img/armário-cozinha.png" alt="Cozinha">
-              <p class="paragrafo-card1">Cozinha Completa com tudo incluso + Coifa de Brinde!</p>
-              <button>Confira essas e outras ofertas aqui!</button>
-            </div>
-        </section> 
-        <footer>
-          <p>&copy; 2025 Casa do Conforto. Todos os direitos reservados.</p>
-        </footer>        
-    </body>
+    <div class="cards-ofertas">
+      <div class="primeiro-card">
+        <img src="img/poltrona.png" alt="Poltrona">
+        <p class="paragrafo-card1">Poltrona de Veludo Aconchegante com Desconto!</p>
+        <button>Confira essas e outras ofertas aqui!</button>
+      </div>
+
+      <div class="segundo-card">
+        <img src="img/sofá.png" alt="Sofá">
+        <p class="paragrafo-card1">Sofá Luxo com Almofadas Grátis - Oferta Exclusiva!</p>
+        <button>Confira essas e outras ofertas aqui!</button>
+      </div>
+
+      <div class="primeiro-card">
+        <img src="img/armário-cozinha.png" alt="Cozinha">
+        <p class="paragrafo-card1">Cozinha Completa com tudo incluso + Coifa de Brinde!</p>
+        <button>Confira essas e outras ofertas aqui!</button>
+      </div>
+  </section>
+  <section class="secao-categorias">
+    <h1>Categorias:</h1>
+    <div class="ambientes">
+      <!--<div class="titulo-ambientes">
+                <h2>Ambientes:</h2>
+                </div>-->
+      <!-- <h2>Ambientes:</h2> -->
+      <div class="cards">
+        <div class="card-sala">
+          <p>Sala</p>
+        </div>
+        <div class="card-quarto">
+          <p>Quarto</p>
+        </div>
+        <div class="card-cozinha">
+          <p>Cozinha</p>
+        </div>
+        <div class="card-banheiro">
+          <p>Banheiro</p>
+        </div>
+        <div class="outros-ambientes">
+          <p>Outros ambientes</p>
+        </div>
+      </div>
+    </div>
+    <div class="moveis">
+      <h2>Móveis:</h2>
+    </div>
+  </section>
+  <footer>
+    <p>&copy; 2025 Casa do Conforto. Todos os direitos reservados.</p>
+  </footer>
+</body>
+
 </html>
