--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
       </div>
     </section>
-  <section class="avaliacoes">
+  <section class="secao-avaliacoes">
     <h2 class="titulo">Avaliações e Comentários</h2>
     <div class="container-principal">
       <!-- Coluna esquerda -->
@@ -191,12 +191,69 @@
         </div>
       </div>
     </div>
-
     <p class="observacao">* Simulação baseada em avaliações fictícias para fins de prototipagem.</p>
   </section>
+  <section class="secao-inscricao">
+    <h1>Inscreva-se para receber novidades!</h1>
+    <div class="mensagem">
+      <p>Fique por dentro das últimas ofertas, novos modelos <br>disponíveis e promoções exclusivas direto no seu e-mail!</p>
+    </div>
+    <input type="text" placeholder="Digite seu email"><br>
+    <button>Inscrever</button>
+    <p class="observacao1">Ainda não tem conta? Cadastre-se aqui:</p>
+  </section>
+  <!-- <section class="footer">
     <footer>
-      <p>&copy; 2025 Casa do Conforto. Todos os direitos reservados.</p>
+      <p>&copy; 2025 Casa do Conforto | Todos os direitos reservados.</p>
     </footer>
-  </body>
+  </section> -->
+  <!-- footer.html -->
+<footer class="footer">
+  <div class="footer-container">
+    <div class="footer-col">
+      <h4>Institucional</h4>
+      <ul>
+        <li><a href="index.html">Quem somos</a></li>
+        <li><a href="index.html">Política de privacidade</a></li>
+        <li><a href="index.html">Termos de uso</a></li>
+      </ul>
+    </div>
 
+    <div class="footer-col">
+      <h4>Ajuda</h4>
+      <ul>
+        <li><a href="#">Trocas e devoluções</a></li>
+        <li><a href="#">Entregas</a></li>
+        <li><a href="#">Formas de pagamento</a></li>
+        <li><a href="#">FAQ</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-col">
+      <h4>Ambientes</h4>
+      <ul>
+        <li><a href="#">Sala</a></li>
+        <li><a href="#">Quarto</a></li>
+        <li><a href="#">Escritório</a></li>
+        <li><a href="#">Todos os ambientes</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-col">
+      <h4>Siga-nos</h4>
+      <div class="social-icons">
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-pinterest"></i></a>
+      </div>
+
+      <footer>
+      <p>&copy; 2025 Casa do Conforto | Todos os direitos reservados.</p>
+    </footer>
+    </div>
+
+  </div>
+</footer>
+
+  </body>
 </html>
