--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <header class="topo">
+  <header id="topo" class="topo">
     <div class="container">
       <div class="logo">
         <img src="img/icon_logosite(1).png" alt="Logo Casa do Conforto">
@@ -22,8 +22,8 @@
         <button><i class="fa fa-search"></i></button>
       </form>
       <nav class="menu">
-        <a href="index.html">Ofertas</a>
-        <a href="index.html">Contato</a>
+        <a href="#produtos" class="secao-produtos">Ofertas</a>
+        <a href="#rodape" class="footer">Contato</a>
         <a href="index.html">Sobre</a>
         <a href="index.html"><i class="fa fa-shopping-cart"></i> Carrinho</a>
         <a href="index.html"><i class="fa fa-user"></i> Conta</a>
@@ -104,41 +104,50 @@
       </div>
     </div>
   </section>
-  <section class="secao-produtos">
+  <section id="produtos" class="secao-produtos">
     <h1>Produtos em destaque/Mais vendidos</h1>
     <div class="cards-produtos">
       <div class="card-produto1">
         <img src="img/card-produto1.jpg" alt="Imagem cadeira">
-          <h1>Cadeira de Escritório Diretor Giratória Mundi NR17 Preta</h1>
-          <h2>de R$600,00</h2>
-          <p class="frase-oferta1">Por R$499,99</p>
-        <button>Ver mais <i class="fas fa-arrow-right"></i></button>
+        <h1>Cadeira de Escritório Diretor Giratória Mundi NR17 Preta</h1>
+        <h2>de R$600,00</h2>
+        <p class="frase-oferta1">Por R$499,99</p>
+        <a href="https://www.mobly.com.br/cadeira-de-escritorio-diretor-giratoria-mundi-nr17-preta-770159.html" target="_blank">
+          <button>Ver mais <i class="fas fa-arrow-right"></i></button>
+        </a>
       </div>
-          <div class="card-produto1">
-            <img src="img/escrivaninha.png" alt="Imagem cadeira">
-            <h1>Mesa de Escritório em L 2 Gavetas 3 Portas Office Nt 2005 Branco</h1>
-            <h2>de R$549,99</h2>
-            <p class="frase-oferta1">Por R$389,99</p>
-            <button>Ver mais <i class="fas fa-arrow-right"></i></button>
-          </div>
-            <div class="card-produto1">
-              <img src="img/guarda-roupa.png" alt="Imagem escrivaninha">
-              <h1>Guarda-Roupa Casal Attore 4 Portas 3 Gavetas Nogueira e Nude</h1>
-              <h2>de R$3.139,99</h2>
-              <p class="frase-oferta1">Por R$1.408,39</p>
-              <button>Ver mais <i class="fas fa-arrow-right"></i></button>
-            </div>
-            <div class="card-produto4">
-              <img src="img/card-produto4.png" alt="Imagem cadeira">
-              <h1 style="margin-top: 0px; margin-bottom: 0px;">Sofá 3 Lugares Living Pés e Base em Madeira Linho Cotton Cinza 180 cm</h1>
-              <h2 style="margin-top: 10px; margin-bottom: 0px;">de R$1.500,00</h2>
-              <p style="margin-top: 0px; margin-bottom: 0px;">Por R$899,99</p>
-              <button>Ver mais <i class="fas fa-arrow-right"></i></button>
-            </div>
-          </div>
-        </div>
+      <div class="card-produto1">
+        <img src="img/escrivaninha.png" alt="Imagem cadeira">
+        <h1>Mesa de Escritório em L 2 Gavetas 3 Portas Office Nt 2005 Branco</h1>
+        <h2>de R$549,99</h2>
+        <p class="frase-oferta1">Por R$389,99</p>
+        <a href="https://www.madeiramadeira.com.br/mesa-de-escritorio-em-l-2-gavetas-3-portas-office-nt-2005-544542.html?index=vr-prod-poc-madeira-recommendation" target="_blank">
+          <button>Ver mais <i class="fas fa-arrow-right"></i></button>
+        </a>
       </div>
-    </section>
+      <div class="card-produto1">
+        <img src="img/guarda-roupa.png" alt="Imagem escrivaninha">
+        <h1>Guarda-Roupa Casal Attore 4 Portas 3 Gavetas Nogueira e Nude</h1>
+        <h2>de R$3.139,99</h2>
+        <p class="frase-oferta1">Por R$1.408,39</p>
+        <a href="https://www.mobly.com.br/guardaroupa-casal-attore-4-portas-3-gavetas-nogueira-e-nude-1231645.html" target="_blank">
+          <button>Ver mais <i class="fas fa-arrow-right"></i></button>
+        </a>
+      </div>
+      <div class="card-produto4">
+        <img src="img/card-produto4 (2).png" alt="Imagem cadeira">
+        <h1 style="margin-top: 0px; margin-bottom: 0px;">Sofá 3 Lugares Living Pés e Base em Madeira Linho Cotton Cinza
+          180 cm</h1>
+        <h2 style="margin-top: 10px; margin-bottom: 0px;">de R$1.500,00</h2>
+        <p style="margin-top: 0px; margin-bottom: 0px;">Por R$899,99</p>
+        <a href="https://www.mobly.com.br/sofa-3-lugares-living-pes-e-base-em-madeira-linho-cotton-cinza-180-cm-435376.html" target="_blank">
+          <button>Ver mais<i class="fas fa-arrow-right"></i></button>
+        </a>
+      </div>
+    </div>
+    </div>
+    </div>
+  </section>
   <section class="secao-avaliacoes">
     <h2 class="titulo">Avaliações e Comentários</h2>
     <div class="container-principal">
@@ -156,11 +165,31 @@
 
         <!-- Barras -->
         <div class="barras">
-          <div class="barra-item"><span>5 <i class="fas fa-star"></i></span><div class="barra"><div class="preenchida barra-5"></div></div></div>
-          <div class="barra-item"><span>4 <i class="fas fa-star"></i></span><div class="barra"><div class="preenchida barra-4"></div></div></div>
-          <div class="barra-item"><span>3 <i class="fas fa-star"></i></span><div class="barra"><div class="preenchida barra-3"></div></div></div>
-          <div class="barra-item"><span>2 <i class="fas fa-star"></i></span><div class="barra"><div class="preenchida barra-2"></div></div></div>
-          <div class="barra-item"><span>1 <i class="fas fa-star"></i></span><div class="barra"><div class="preenchida barra-1"></div></div></div>
+          <div class="barra-item"><span>5 <i class="fas fa-star"></i></span>
+            <div class="barra">
+              <div class="preenchida barra-5"></div>
+            </div>
+          </div>
+          <div class="barra-item"><span>4 <i class="fas fa-star"></i></span>
+            <div class="barra">
+              <div class="preenchida barra-4"></div>
+            </div>
+          </div>
+          <div class="barra-item"><span>3 <i class="fas fa-star"></i></span>
+            <div class="barra">
+              <div class="preenchida barra-3"></div>
+            </div>
+          </div>
+          <div class="barra-item"><span>2 <i class="fas fa-star"></i></span>
+            <div class="barra">
+              <div class="preenchida barra-2"></div>
+            </div>
+          </div>
+          <div class="barra-item"><span>1 <i class="fas fa-star"></i></span>
+            <div class="barra">
+              <div class="preenchida barra-1"></div>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -169,25 +198,31 @@
         <div class="comentario">
           <div class="topo1">
             <span class="nome">Luiza P. – Fortaleza/CE</span>
-            <div class="estrelas"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+            <div class="estrelas"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                class="fas fa-star"></i><i class="fas fa-star"></i></div>
           </div>
-          <p class="texto">“Site super intuitivo e fácil de navegar. Encontrei tudo que precisava com rapidez, e o processo de pagamento foi tranquilo. Com certeza voltarei a comprar!”</p>
+          <p class="texto">“Site super intuitivo e fácil de navegar. Encontrei tudo que precisava com rapidez, e o
+            processo de pagamento foi tranquilo. Com certeza voltarei a comprar!”</p>
         </div>
 
         <div class="comentario">
           <div class="topo1">
             <span class="nome">Jorge F. – Belo Horizonte/MG</span>
-            <div class="estrelas"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+            <div class="estrelas"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                class="fas fa-star"></i><i class="fas fa-star"></i></div>
           </div>
-          <p class="texto">“Gostei bastante do site, tem boas promoções e o layout é bem agradável. Só achei que poderia ter mais filtros de pesquisa.”</p>
+          <p class="texto">“Gostei bastante do site, tem boas promoções e o layout é bem agradável. Só achei que poderia
+            ter mais filtros de pesquisa.”</p>
         </div>
 
         <div class="comentario">
           <div class="topo1">
             <span class="nome">Ana C. – São Paulo/SP</span>
-            <div class="estrelas"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+            <div class="estrelas"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                class="fas fa-star"></i><i class="fas fa-star"></i></div>
           </div>
-          <p class="texto">“O sofá é confortável e bem acabado, mas a entrega demorou 2 dias a mais do que o previsto. Nada grave, mas fica a observação.”</p>
+          <p class="texto">“O sofá é confortável e bem acabado, mas a entrega demorou 2 dias a mais do que o previsto.
+            Nada grave, mas fica a observação.”</p>
         </div>
       </div>
     </div>
@@ -196,10 +231,13 @@
   <section class="secao-inscricao">
     <h1>Inscreva-se para receber novidades!</h1>
     <div class="mensagem">
-      <p>Fique por dentro das últimas ofertas, novos modelos <br>disponíveis e promoções exclusivas direto no seu e-mail!</p>
+      <p>Fique por dentro das últimas ofertas, novos modelos <br>disponíveis e promoções exclusivas direto no seu
+        e-mail!</p>
     </div>
     <input type="text" placeholder="Digite seu email"><br>
-    <button>Inscrever</button>
+    <a href="#topo" class="topo">
+      <button>Inscrever</button>
+    </a>
     <p class="observacao1">Ainda não tem conta? Cadastre-se aqui:</p>
   </section>
   <!-- <section class="footer">
@@ -208,52 +246,56 @@
     </footer>
   </section> -->
   <!-- footer.html -->
-<footer class="footer">
-  <div class="footer-container">
-    <div class="footer-col">
-      <h4>Institucional</h4>
-      <ul>
-        <li><a href="index.html">Quem somos</a></li>
-        <li><a href="index.html">Política de privacidade</a></li>
-        <li><a href="index.html">Termos de uso</a></li>
-      </ul>
-    </div>
-
-    <div class="footer-col">
-      <h4>Ajuda</h4>
-      <ul>
-        <li><a href="#">Trocas e devoluções</a></li>
-        <li><a href="#">Entregas</a></li>
-        <li><a href="#">Formas de pagamento</a></li>
-        <li><a href="#">FAQ</a></li>
-      </ul>
-    </div>
-
-    <div class="footer-col">
-      <h4>Ambientes</h4>
-      <ul>
-        <li><a href="#">Sala</a></li>
-        <li><a href="#">Quarto</a></li>
-        <li><a href="#">Escritório</a></li>
-        <li><a href="#">Todos os ambientes</a></li>
-      </ul>
-    </div>
-
-    <div class="footer-col">
-      <h4>Siga-nos</h4>
-      <div class="social-icons">
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-pinterest"></i></a>
+   <section id="rodape" class="footer">
+    <div class="footer-container">
+      <div class="footer-col">
+        <h4>Institucional</h4>
+        <ul style="list-style: none; padding-left: 0;">
+          <li><a href="index.html">Quem somos</a></li>
+          <li><a href="index.html">Política de privacidade</a></li>
+          <li><a href="index.html">Termos de uso</a></li>
+        </ul>
       </div>
-
-      <footer>
+      <div class="footer-col">
+        <h4>Ajuda</h4>
+        <ul style="list-style: none; padding-left: 0;">
+          <li><a href="index.html">Trocas e devoluções</a></li>
+          <li><a href="index.html">Entregas</a></li>
+          <li><a href="index.html">Formas de pagamento</a></li>
+          <li><a href="index.html">FAQ</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h4>Ambientes</h4>
+        <ul style="list-style: none; padding-left: 0;">
+          <li><a href="index.html">Sala</a></li>
+          <li><a href="index.html">Quarto</a></li>
+          <li><a href="index.html">Escritório</a></li>
+          <li><a href="index.html">Todos os ambientes</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h4>Início</h4>
+        <ul style="list-style: none; padding-left: 0;">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html">Login</a></li>
+          <li><a href="index.html">Cadastrar</a></li>
+          <li><a href="index.html">Email</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h4>Siga-nos</h4>
+        <div class="social-icons">
+          <a href="index.html"><i class="fab fa-instagram"></i></a>
+          <a href="index.html"><i class="fab fa-facebook"></i></a>
+          <a href="index.html"><i class="fab fa-pinterest"></i></a>
+        </div>
+      </div>
+    </div>
+    <footer>
       <p>&copy; 2025 Casa do Conforto | Todos os direitos reservados.</p>
     </footer>
-    </div>
+  </section>
+</body>
 
-  </div>
-</footer>
-
-  </body>
 </html>
